# Ninecraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: build.sh  common.sh  install.sh  prepare.sh  run.sh
docker/run/: Dockerfile
ninecraft/include/ninecraft/: minecraft.h
ninecraft/include/ninecraft/ptpatch/: apply.h  lib.h
ninecraft/src/: AppPlatform_linux.c  main.c  text_box.c
ninecraft/src/mods/: usernames_mod.c
ninecraft/src/ptpatch/: apply.c  lib.c
